reorg code and added favicon

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>Chop Block🔪
-  </title>
+  <title>Chop Block🔪</title>
+  <link rel="icon" href="./src/static/favicon.png">
 </head>
 
 <body>
