css fixes, favicon fixes

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>Chop Block🔪</title>
-  <link rel="icon" href="./src/static/favicon.png">
+  <title>🔪🚫Chop Block</title>
+  <link rel="icon" href="./src/static/favicon.png" type="image/x-icon">
 </head>
 
 <body>
