--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>🔪🚫Chop Block</title>
+  <title>Title Here</title>
   <link rel="icon" href="./src/static/favicon.png" type="image/x-icon">
 </head>
 
