--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Title Here</title>
-  <link rel="icon" href="./src/static/favicon.png" type="image/x-icon">
+  <link rel="icon" href="./src/static/favicon1.png" type="image/x-icon">
 </head>
 
 <body>
