--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Title Here</title>
   <link rel="icon" href="./src/static/favicon1.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+    crossorigin="" />
 </head>
 
 <body>
